--- a/app/views/pois/_poi_mobile_show.html.erb
+++ b/app/views/pois/_poi_mobile_show.html.erb
@@ -11,6 +11,7 @@
     style="width: 100vw;
     height: 100vh;"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+    data-zoom="10"
     data-game="on">
     <div class="position-right">
       <%= render 'shared/bar_timer' %>
