--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,8 +40,9 @@
               <div class="scores">
                 <div class="group-score-img-body">
 
+                  <%= link_to game_path(game) do %>
                   <img class="scores-image" src="<%= cl_image_path game.theme.photo,crop: :fill %>">
-
+                  <% end %>
                   <div class="scores-body text-center">
                     <p><%= game.theme.city.name %></p>
                     <p><%= game.theme.name %></p>
