link to game show sur game.theme.name ok + police normale

--- a/app/assets/stylesheets/components/_score.scss
+++ b/app/assets/stylesheets/components/_score.scss
@@ -38,8 +38,8 @@
   margin-top: 0;
 }
 .scores-body p {
-  font-weight: lighter;
-  color: #999999;
+  // font-weight: lighter;
+  color: #000000;
   margin-bottom: 0;
 }
 
