--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -55,7 +55,7 @@
                           theme_games_path(game.theme_id,
                           game: {multi: false}),
                           method: :post %></button></li>
-                  <li><button class="btn btn-primary btn-reverse"><%= link_to "Challenge a friend",
+                  <li><button class="btn btn-primary btn-pimp-w"><%= link_to "Challenge a friend",
                           theme_games_url(game.theme_id,
                           game:{multi: true}),
                           data: { method: :post, remote: true}%></button> </li>
