--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -10,7 +10,7 @@
           </div>
           <p>Can you locate places <br> on an unlabeled map ?</p>
           <!-- Lien du bouton passer sur une URL absolu pour permettre de revenir à une page sans search -->
-          <a class="btn btn-form btn-lg btn-white btn-pimp btn-home" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
+          <a class="btn btn-fw btn-pimp btn-home" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
         </div>
       </div>
     </div>
