--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 90px;
 }
 
 .banner h1 {
@@ -26,7 +27,7 @@
   font-size: 25px;
   font-weight: bold;
   margin-bottom: 30px;
-  color: #ffffff;
+  color: #000;
 }
 
 .logo-big {
@@ -41,4 +42,10 @@ body {
 
 #full-page {
   height: 90vh;
+}
+@media (max-width: 414px) {
+
+  .banner-content {
+    margin-top: 0px;
+  }
 }
