--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -18,12 +18,12 @@
                 <%= link_to "complete your part", game_poi_url(@game,@poi),  class: "btn btn-pimp btn-fw text-center" %>
                 <% end %>
               <% else %>
-              <h1>Can you beat <%=@game.user_one.username%> on the quizz <%=@theme.name%> of <%= @theme.city.name  %>?</h1>
+              <h1>Can you beat <%=@game.user_one.username%> on the quizz <%=@theme.name%> of <%= @theme.city.name  %> ?</h1>
                 <%= link_to "Yes I can, let's play", game_challenge_url(@game) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
               <% end %>
           <% else %>
-          <h1> Can you beat <%= @game.user_one.username  %>  on the quizz <%= @theme.name  %> <%= @theme.city.name  %> </h1>
-            <h2>You first need to loggin to participate</h2>
+          <h1> Can you beat <%= @game.user_one.username  %>  on the quizz <%= @theme.name  %> <%= @theme.city.name  %> ?</h1>
+            <h2>You first need to login to participate</h2>
             <%= link_to "Ok let's do this", game_challenge_url(@game) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
           <% end %>
         <% else  %>
