bloc violet sur 720

--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -1,5 +1,5 @@
 .menu-score-container {
-  margin-top: 20px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,24 +17,33 @@
 
   .score-card {
     width: 350px;
-    height: 270px;
+    height: 220px;
     z-index: 3000;
     padding: 20px;
     overflow: hidden;
   }
 
   .score-card.open {
-    height: 650px;
+    height: 460px;
     transition: all 1.5s ease-in-out;
   }
 
   .score-card-lvl-2 {
-    height: 650px;
+    height: 460px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+  }
+
+  .score-card-lvl-2 h1 {
+    margin-top: 15px;
+    font-size: 30px;
+  }
+
+    .score-card-lvl-2 p {
+    margin-top: 15px;
   }
 
   .icon-great {
@@ -56,6 +65,7 @@
     color: $purple;
     border-radius: 50%;
     padding: 10px;
+    margin-top: 5px;
   }
 
   .POI_name {
@@ -94,7 +104,7 @@
   .row-pin {
     display: flex;
     flex-direction: row;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
     align-items: center;
     justify-content: center;
   }
@@ -102,7 +112,7 @@
   .row-time {
     display: flex;
     flex-direction: row;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
   }
 
   .btn-play{
