--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -27,17 +27,17 @@
   font-size: 25px;
   font-weight: bold;
   margin-bottom: 30px;
-  color: #000;
+  color: #fff;
 }
 
-.logo-big {
+.logo-map-homepage {
   width: 250px;
   height: 250px;
   margin-bottom: 60px;
 }
 
 body {
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 #full-page {
