--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container container-homepage">
   <div class="row">
     <div class="col-xs-12 col-md-4">
       <div class="banner">
 
 <!--       <div class="banner" style="background-image: linear-gradient(180.49deg, rgba(0, 0, 0, 0) 1.06%, #FFFFFF 72.86%), url(<%= asset_path 'Banner-mind-the-map.png' %>);"> -->
         <div class="banner-content">
-          <div class="logo-big">
-            <%= image_tag("logo-big.svg") %>
+          <div class="logo-map-homepage">
+            <%= image_tag("map_example.png", height: 250) %>
           </div>
           <p>Can you locate places <br> on an unlabeled map ?</p>
           <!-- Lien du bouton passer sur une URL absolu pour permettre de revenir à une page sans search -->
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-md-8 wrapper">
+    <div class="col-xs-12 col-md-8 wrapper-homepage">
       <div class="container-card" id="cards-from-paris">
 
         <h2 align="center">Pick a quiz</h2>
