--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -23,15 +23,18 @@
 
           <% @themes.each do |theme| %>
             <div class="col-xs-12 col-sm-4">
-              <div class="game-card" data-toggle="modal" data-target="#themeModal<%= theme.id %>">
+<!--               <div class="game-card" data-toggle="modal" data-target="#themeModal<%= theme.id %>"> -->
+                <div class="game-card">
+
                 <div class="card-theme">
 
-                  <div class="card" style="background-image: url('<%= cl_image_path theme.photo%>');">
-                    <div class="card-footer">
-                      <p><%= theme.name %></p>
+                  <%= link_to theme_games_url(theme.id , game: {multi: false}), method: :post do %>
+                    <div class="card" style="background-image: url('<%= cl_image_path theme.photo%>');">
+                      <div class="card-footer">
+                        <p><%= theme.name %></p>
+                      </div>
                     </div>
-                  </div>
-
+                  <% end %>
                 </div>
               </div>
             </div>
