mouais la modale charge pas... le controller et les routes semble fonctionné et il faut revoir l'affichage du score quand il y a 2 opposant

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -38,7 +38,7 @@
 
   <div class="btn-wrapper row text-center">
     <div class="col-xs-12 col-md-4">
-      <%= link_to 'Play again',
+      <%= link_to 'Improve your score: play again',
         theme_games_url(@theme.id,
         game:{multi: false}),
         method: :post,
@@ -47,9 +47,9 @@
      </div>
     <div class="col-xs-12 col-md-4 text-center">
       <%= link_to "Challenge a friend",
-        theme_games_url(@theme.id,
+        game_updatebis_path(@game,
         game:{multi: true}),
-        data: { method: :post, remote: true},
+        data: { method: :patch, toggle: "modal", target: "#ModalMulti" },
         class: "btn btn-primary btn-fw btn-pimp"
       %>
     </div>
@@ -143,13 +143,6 @@
               <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="LinkChallenge" value="">
               <button class="btn btn-primary" id="button-copy-theme" onclick="copyToClip();">Copy Link</button>
             </form>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12-sm text-center">
-            <!-- bouton facebook qui ne marche pas <button class="btn btn-primary" id="fb" href="#">Share on Facebook</button> -->
-            <br>
-            <a href="" class="btn btn-primary" id="yourGame">Start your game</a>
           </div>
         </div>
       </div>
