--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -76,3 +76,13 @@
 #cards-from-paris {
   margin-top: 0px;
 }
+
+#cards-from-paris h1 {
+  margin-top: 12px;
+  margin-bottom: 20px;
+}
+
+#cards-from-paris h2 {
+  margin-bottom: 30px;
+}
+
