--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,9 +1,8 @@
-<div class="container container-homepage">
-  <div class="row">
-    <div class="col-xs-12 col-md-4">
+<div class="container-homepage">
+  <div class="flexbox-hp">
+    <div class="" id="hp-left">
       <div class="banner">
 
-<!--       <div class="banner" style="background-image: linear-gradient(180.49deg, rgba(0, 0, 0, 0) 1.06%, #FFFFFF 72.86%), url(<%= asset_path 'Banner-mind-the-map.png' %>);"> -->
         <div class="banner-content">
           <div class="logo-map-homepage">
             <%= image_tag("map_example.png", height: 250) %>
@@ -15,9 +14,9 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-md-8 wrapper-homepage">
+    <div class=" wrapper-homepage">
       <div class="container-card" id="cards-from-paris">
-
+        <h1 align="center">Welcome to Paris</h1>
         <h2 align="center">Pick a quiz</h2>
         <div class="row">
 
