--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 
           <div class="let-play">
             <div class="row">
-              <H2>Alors comme ça on se créé un compte et on veut pas faire sa première partie ?</H2>
+              <H2>So just like that... you create an account and you don't even play a game </H2>
             </div> <!-- fin row -->
           </div> <!-- fin de let-play -->
 
