remplacement de la methode sample par une methode first pour toujours avoir le premier POI de la liste

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -60,7 +60,7 @@
     <% end %>
 
     <div class="col-sm-12 col-md-4">
-      <%= link_to 'Improve your score: play again',
+      <%= link_to "Play again",
         theme_games_url(@theme.id,
         game:{multi: false}),
         method: :post,
