link to leaderboard ok

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -69,7 +69,7 @@
     <% end %>
 
     <div class="col-xs-12 col-md-4">
-      <%= link_to 'Leaderboard', leaderboard_path, class: "btn btn-pimp btn-fw" %>
+      <%= link_to 'Leaderboard', leaderboard_path(:query => "#{@theme.id}"), class: "btn btn-pimp btn-fw" %>
     </div>
   </div>
 
